Fix overflown elements

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* ==================== Custom Fonts (for Konva canvas) ==================== */
 @font-face {
   font-family: 'NotoSansJP';
